Change all Red Starter apperence to Montessori

--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -6,8 +6,8 @@
      padding-top: 40px;
      width: 70%;
     float:right;
-   
-   
+
+
 }
 
  .menu-menu-1-container{
@@ -20,19 +20,18 @@
    color:black;
     font-size: 18px;
     border-top: 4px solid transparent;
-    list-style:none;    
+    list-style:none;
    padding: 15px 0px;
     margin: 0px 5px;
 }
 }}}
-  .menu-menu-1-container ul .active {
-      a{
-        
- border-top: 4px solid #57B79F;;
-    color:#57B79F;
-    cursor: pointer;
-      }
-  }
+ .current-menu-item{      
+a{
+     border-top: 4px solid #57B79F;
+     color:#57B79F;
+     cursor: pointer;
+   }
+}
 
  .menu-menu-1-container
 {
@@ -44,3 +43,17 @@
     cursor: pointer;
     }}}
 }
+/****** sub menu *****/
+.secondary{
+	background-color:#248E6A;
+	li{
+			display: inline-block;
+			padding:10px 5px 10px 5px;
+		a{
+
+	text-decoration: none;
+	color:white;
+}
+	}
+}
+/* end sub menu*/
