--- a/themes/montessori-theme/sass/_navigation.scss
+++ b/themes/montessori-theme/sass/_navigation.scss
@@ -101,32 +101,46 @@
 	display: block;
 }*/
 
-@media screen and (min-width: 37.5em) {
-	.menu-toggle {
-		display: none;
-	}
-	.main-navigation ul {
-		display: block;
+// @media screen and (min-width: 37.5em) {
+// 	.menu-toggle {
+// 		display: none;
+// 	}
+// 	.main-navigation ul {
+// 		display: block;
+// 	}
+// }
+
+// .comment-navigation,
+// .posts-navigation,
+// .post-navigation {
+//
+// 	.site-main & {
+// 		margin: 0 0 $base__space-unit;
+// 		overflow: hidden;
+// 	}
+//
+// 	.nav-previous {
+// 		float: left;
+// 		width: 50%;
+// 	}
+//
+// 	.nav-next {
+// 		float: right;
+// 		text-align: right;
+// 		width: 50%;
+// 	}
+// }
+/****** sub menu *****/
+.secondary{
+	background-color:#248E6A;
+	li{
+			display: inline-block;
+			padding:10px 5px 10px 5px;
+		a{
+
+	text-decoration: none;
+	color:white;
+}
 	}
 }
-
-.comment-navigation,
-.posts-navigation,
-.post-navigation {
-
-	.site-main & {
-		margin: 0 0 $base__space-unit;
-		overflow: hidden;
-	}
-
-	.nav-previous {
-		float: left;
-		width: 50%;
-	}
-
-	.nav-next {
-		float: right;
-		text-align: right;
-		width: 50%;
-	}
-}
+/* end sub menu*/
