--- a/themes/montessori-theme/sass/_widgets.scss
+++ b/themes/montessori-theme/sass/_widgets.scss
@@ -15,3 +15,14 @@
 .widget_search .search-submit {
 	display: none;
 }
+/****** sub menu *****/
+.secondary{
+	background-color:#248E6A;
+	li{
+			display: inline-block;
+		a{
+	text-decoration: none;
+	color:white;
+}
+	}
+}
