--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1,8 +1,8 @@
 /*!
 Theme Name: Montessori
 Theme URI: http://underscores.me/
-Author: RED Academy
-Author URI: http://www.redacademy.com
+Author: Montessori
+Author URI: http://www.Montessori.com
 Description: A WordPress starter theme for RED Academy students.
 Version: 1.0.0
 License: GNU General Public License v2 or later
@@ -501,31 +501,17 @@ textarea {
 .main-navigation.toggled ul {
 	display: block;
 }*/
-@media screen and (min-width: 37.5em) {
-  .menu-toggle {
-    display: none; }
-  .main-navigation ul {
-    display: block; } }
+/****** sub menu *****/
+.secondary {
+  background-color: #248E6A; }
+  .secondary li {
+    display: inline-block;
+    padding: 10px 5px 10px 5px; }
+    .secondary li a {
+      text-decoration: none;
+      color: white; }
 
-.site-main .comment-navigation, .site-main
-.posts-navigation, .site-main
-.post-navigation {
-  margin: 0 0 1.5em;
-  overflow: hidden; }
-
-.comment-navigation .nav-previous,
-.posts-navigation .nav-previous,
-.post-navigation .nav-previous {
-  float: left;
-  width: 50%; }
-
-.comment-navigation .nav-next,
-.posts-navigation .nav-next,
-.post-navigation .nav-next {
-  float: right;
-  text-align: right;
-  width: 50%; }
-
+/* end sub menu*/
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
@@ -595,6 +581,15 @@ textarea {
 /* Search widget. */
 .widget_search .search-submit {
   display: none; }
+
+/****** sub menu *****/
+.secondary {
+  background-color: #248E6A; }
+  .secondary li {
+    display: inline-block; }
+    .secondary li a {
+      text-decoration: none;
+      color: white; }
 
 /*--------------------------------------------------------------
 # Content
@@ -723,7 +718,7 @@ object {
     padding: 15px 0px;
     margin: 0px 5px; }
 
-.menu-menu-1-container ul .active a {
+.current-menu-item a {
   border-top: 4px solid #57B79F;
   color: #57B79F;
   cursor: pointer; }
@@ -733,6 +728,17 @@ object {
   color: #57B79F;
   cursor: pointer; }
 
+/****** sub menu *****/
+.secondary {
+  background-color: #248E6A; }
+  .secondary li {
+    display: inline-block;
+    padding: 10px 5px 10px 5px; }
+    .secondary li a {
+      text-decoration: none;
+      color: white; }
+
+/* end sub menu*/
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
