--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -25,7 +25,7 @@
 // <button class="btn ">here will be the text</button>
 
 
-.button {
+button {
   width: 320px;
   height: 66px;
   overflow: hidden;
