--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1,8 +1,8 @@
 /*!
 Theme Name: Montessori
 Theme URI: http://underscores.me/
-Author: Montessori
-Author URI: http://www.Montessori.com
+Author: RED Academy
+Author URI: http://www.redacademy.com
 Description: A WordPress starter theme for RED Academy students.
 Version: 1.0.0
 License: GNU General Public License v2 or later
@@ -697,9 +697,21 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
+.cfsBorder {
+  width: 40%;
+  overflow: scroll;
+  text-align: justify;
+  height: 200px;
+  border-left: 5px solid #D93B57;
+  padding-left: 15px;
+  padding-right: 10px; }
+
+.cfscontainer {
+  width: 80px;
+  padding: 10px;
+  overflow: visible;
+  height: auto; }
+
 .menu-menu-1-container {
   padding-top: 40px;
   width: 70%;
