--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -1,9 +1,7 @@
 /*--------------------------------------------------------------
-# Content
+# Montessori
 --------------------------------------------------------------*/
-
-/* Posts and pages */
 .container{
-	width:1170px;
-	margin: auto;
+  width:400px;
+  margin: auto;
 }
