make the menu activ on current page

--- a/themes/montessori-theme/sass/_navigation.scss
+++ b/themes/montessori-theme/sass/_navigation.scss
@@ -8,7 +8,6 @@
 		width: 70%;
 	 float:right;
 
-
 }
 
 .menu-menu-1-container{
@@ -26,8 +25,8 @@
 	 margin: 0px 5px;
 }
 }}}
-.current-menu-item{
-a{
+#primary-menu li.current-menu-item {
+	a{
 		border-top: 4px solid #57B79F;
 		color:#57B79F;
 		cursor: pointer;
