make the menu mobile approach

--- a/themes/montessori-theme/sass/_media.scss
+++ b/themes/montessori-theme/sass/_media.scss
@@ -86,3 +86,11 @@ object {
 .gallery-caption {
 	display: block;
 }
+@media screen and (max-width: 480px) {
+    body {
+        background-color: lightgreen;
+    }
+		.menu-menu-1-container{
+			display: none;
+		}
+}
