fix header and add montessori logo

--- a/themes/montessori-theme/sass/_media.scss
+++ b/themes/montessori-theme/sass/_media.scss
@@ -94,3 +94,20 @@ object {
 			display: none;
 		}
 }
+.montessori-logo{
+	width:20rem;
+	height: 5rem;
+ img{
+	height: 100%;
+	width: 100%;
+}
+}
+.main-navigation-container{
+	display: flex;
+}
+.main-navigation{
+	width: 70%;
+}
+div .menu-menu-1-container{
+	width: 100%;
+}
