add more functions and css

--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -1,53 +1,43 @@
 
- .menu-menu-1-container{
-     padding-top: 40px;
-     width: 70%;
-    float:right;
+.main-navigation-container{
+	display: flex;
 }
- .menu-menu-1-container{
-    ul{
-        li{ display: inline-block;
-            a{
-              text-transform: uppercase;
-    font-weight: 400;
-    text-decoration: none;
-   color:black;
-    font-size: 18px;
-    border-top: 4px solid transparent;
-    list-style:none;
-   padding: 15px 0px;
-    margin: 0px 5px;
+.main-navigation{
+	width: 100%;
 }
-}}}
- .current-menu-item{
-a{
-     border-top: 4px solid #57B79F;
-     color:#57B79F;
-     cursor: pointer;
-   }
+div .menu-primary-menu-container{
+	width: 100%;
 }
-
- .menu-menu-1-container
-{
-    ul
-    { li
-    { a:hover{
-     border-top: 4px solid #57B79F;;
-    color:#57B79F;
-    cursor: pointer;
-    }}}
+.montessori-logo{
+	width:15rem;
+	height: 5rem;
+ img{
+	height: 100%;
+	width: 100%;
 }
-/****** sub menu *****/
-.secondary{
-	background-color:#248E6A;
-	li{
-			display: inline-block;
-			padding:10px 5px 10px 5px;
-		a{
-
-	text-decoration: none;
-	color:white;
 }
-	}
+@media screen and (max-width: 769px) {
+    body {
+        background-color: lightgreen;
+    }
+		.menu-primary-menu-container{
+			display: none;
+		}
 }
-/* end sub menu*/
+.montessori-logo{
+	width:10rem;
+	height: 2rem;
+ img{
+	height: 100%;
+	width: 100%;
+}
+}
+.main-navigation-container{
+	display: flex;
+}
+.main-navigation{
+	width: 70%;
+}
+div .menu-primary-menu-container{
+	width: 100%;
+}
