--- a/themes/montessori-theme/sass/_navigation.scss
+++ b/themes/montessori-theme/sass/_navigation.scss
@@ -2,15 +2,15 @@
 # Navigation
 --------------------------------------------------------------*/
 
-
-.menu-menu-1-container{
+/*primary-menu*/
+.menu-primary-menu-container{
 		padding-top: 40px;
 		width: 70%;
 	 float:right;
 
 }
 
-.menu-menu-1-container{
+.menu-primary-menu-container{
 	 ul{
 			 li{ display: inline-block;
 					 a{
@@ -18,13 +18,14 @@
 	 font-weight: 400;
 	 text-decoration: none;
 	color:black;
-	 font-size: 18px;
+	 font-size: 1rem;
 	 border-top: 4px solid transparent;
 	 list-style:none;
 	padding: 15px 0px;
 	 margin: 0px 5px;
 }
-}}}
+}
+}}
 #primary-menu li.current-menu-item {
 	a{
 		border-top: 4px solid #57B79F;
@@ -32,8 +33,17 @@
 		cursor: pointer;
 	}
 }
-
-.menu-menu-1-container
+#primary-menu{
+	width: 1000px;
+}
+.menu-about-container,
+.menu-montessori-container
+{
+text-align: right;
+	width: 1200px;
+	padding:10px 20 10px 10;
+}
+.menu-primary-menu-container
 {
 	 ul
 	 { li
@@ -50,10 +60,10 @@
 		 display: inline-block;
 		 padding:10px 5px 10px 5px;
 	 a{
-
  text-decoration: none;
  color:white;
 }
  }
 }
+
 /* end sub menu*/
