--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -2,6 +2,6 @@
 # Montessori
 --------------------------------------------------------------*/
 .container{
-  width:400px;
-  margin: auto;
+  width:100%;
+  margin:0 auto;
 }
