--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -36,8 +36,7 @@ $white: #fff;
 
 // Typography ///
 $font_title: 'Asap';
-$font_footer: 'PT Sans';
-$font_header: 'Raleway', sans-serif;
+$font_footer_header: 'PT Sans';
 $font_body: 'Noto Sans';
 $font_main: 'Noto Sans';
 ///Font Sizing ///
